TIKA-4278: refactor delimiters as a set to include semicolon pipe and colon, code cleanup